<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/register_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="39dp"
        android:layout_weight="1"
        android:textSize="30sp"
        android:text="@string/register_signUp"/>

    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_tittle"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/register_name"/>

    <EditText
        android:id="@+id/register_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_username"
        android:layout_alignStart="@+id/register_username"
        android:layout_below="@+id/register_username"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/register_fname"/>

    <EditText
        android:id="@+id/register_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_fname"
        android:layout_alignStart="@+id/register_fname"
        android:layout_below="@+id/register_fname"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/register_login"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_login"
        android:layout_alignStart="@+id/register_login"
        android:layout_below="@+id/register_login"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/register_password"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/register_password"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:layout_marginTop="32dp"
        android:text="@string/register_button"/>
</RelativeLayout>
