<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_body"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_title"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/login_username_hint"
        android:inputType="textPersonName"
        android:textColor="@color/login_username"
        android:textColorHint="@color/login_username_hint" />

    <EditText
        android:id="@+id/login_password"
        android:textColor="@color/login_username"
        android:textColorHint="@color/login_username_hint"
        android:hint="@string/login_password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_username"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/login_forgotten_password"
        android:text="@string/login_forgotten_password"
        android:textColor="@color/login_forgotten_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/login_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_forgotten_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@color/login_sign_in_background"
        android:text="@string/login_sign_in"
        android:textColor="@color/login_sign_in_foreground" />

    <TextView
        android:id="@+id/login_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up"
        android:textColor="@color/login_forgotten_password"
        android:textSize="18sp"
        android:layout_below="@+id/login_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp" />

    <TextView
        android:id="@+id/login_title"
        android:text="@string/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/login_title"/>
</RelativeLayout>
